--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,9 +91,11 @@
   justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
+  width: 100%;
   flex: 8;
   margin: 5px 20px 10px 20px;
-  overflow: scroll; }
+  overflow-y: scroll;
+  overflow-x: hidden; }
 
 .otherMessage {
   margin-top: 15px;
@@ -106,10 +108,10 @@
 .userPic {
   background-image: url("../img/user.png");
   width: 40px;
-  height: 35px;
+  height: 40px;
+  border-radius: 50%;
   background-size: cover;
-  margin-bottom: 10px;
-  margin-right: 35px; }
+  margin-bottom: 10px; }
 
 .userName {
   font-weight: bold;
