--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,7 +91,7 @@
   justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
-  width: 100%;
+  width: 90%;
   flex: 8;
   margin: 5px 20px 10px 20px;
   overflow-y: scroll;
@@ -102,8 +102,7 @@
   background-color: rgba(49, 55, 69, 0.7);
   color: #fff;
   padding: 10px 10px 10px 10px;
-  border-radius: 15px;
-  width: 280px; }
+  border-radius: 15px; }
 
 .userPic {
   background-image: url("../img/user.png");
@@ -129,8 +128,7 @@
   color: #fff;
   padding: 10px 10px 10px 10px;
   margin-left: 18%;
-  border-radius: 15px;
-  width: 280px; }
+  border-radius: 15px; }
 
 .insertText {
   display: flex;
