scrolling to bottom

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,7 +102,10 @@
   background-color: rgba(49, 55, 69, 0.7);
   color: #fff;
   padding: 10px 10px 10px 10px;
-  border-radius: 15px; }
+  border-radius: 15px;
+  align-self: flex-start;
+  overflow-wrap: break-word;
+  max-width: 80vw; }
 
 .userPic {
   background-image: url("../img/user.png");
@@ -128,7 +131,11 @@
   color: #fff;
   padding: 10px 10px 10px 10px;
   margin-left: 18%;
-  border-radius: 15px; }
+  border-radius: 15px;
+  min-width: 40vw;
+  align-self: flex-end;
+  overflow-wrap: break-word;
+  max-width: 80vw; }
 
 .insertText {
   display: flex;
