--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,6 +98,7 @@
   overflow-x: hidden; }
 
 .otherMessage {
+  display: none;
   margin-top: 15px;
   background-color: rgba(49, 55, 69, 0.7);
   color: #fff;
@@ -126,13 +127,14 @@
   padding-bottom: 5px; }
 
 .myMessage {
+  display: none;
   margin-top: 15px;
+  margin-right: 15px;
   background-color: rgba(60, 129, 101, 0.7);
   color: #fff;
   padding: 10px 10px 10px 10px;
   margin-left: 18%;
   border-radius: 15px;
-  min-width: 40vw;
   align-self: flex-end;
   overflow-wrap: break-word;
   max-width: 80vw; }
@@ -181,5 +183,19 @@
 
 body {
   font-family: 'Roboto', sans-serif; }
+
+textarea {
+  resize: none; }
+
+::-webkit-scrollbar {
+  width: 12px; }
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px; }
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
 
 /*# sourceMappingURL=main.css.map */
