--- a/assets/scss/_chatScreen.scss
+++ b/assets/scss/_chatScreen.scss
@@ -50,6 +50,7 @@
 }
 
 .otherMessage {
+  display: none;
   margin-top: 15px;
   background-color: rgba(49, 55, 69, 0.7);
   color: #fff;
@@ -82,13 +83,14 @@
 }
 
 .myMessage {
+  display: none;
   margin-top: 15px;
+  margin-right: 15px;
   background-color: rgba(60, 129, 101, 0.7);
   color: #fff;
   padding: 10px 10px 10px 10px;
   margin-left: 18%;
   border-radius: 15px;
-  min-width: 40vw;
   align-self: flex-end;
   overflow-wrap: break-word;
   max-width: 80vw;
