--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,3 +4,22 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+textarea {
+  resize: none;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
