changed the max-width

--- a/assets/scss/_loginScreen.scss
+++ b/assets/scss/_loginScreen.scss
@@ -1,6 +1,7 @@
 @import "_colorVariable";
 
 .mainWindow {
+  max-width: 450px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
