--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 .mainWindow {
+  max-width: 450px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
@@ -55,6 +56,7 @@
   font-size: 22px; }
 
 .main {
+  max-width: 450px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
