--- a/assets/scss/_chatScreen.scss
+++ b/assets/scss/_chatScreen.scss
@@ -1,6 +1,7 @@
 @import "_colorVariable";
 
 .main {
+  max-width: 450px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
